--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"next": "15.5.5",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
-		"styled-components": "^6.1.19"
+		"styled-components": "^6.1.19",
+		"swiper": "^12.0.2"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
