--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"next": "15.5.5",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
+		"react-hook-form": "^7.65.0",
 		"recharts": "^3.2.1",
 		"styled-components": "^6.1.19",
 		"swiper": "^12.0.2"
