--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@mui/material": "^7.3.4",
 		"@mui/styled-engine-sc": "^7.3.3",
 		"next": "15.5.5",
+		"next-pwa": "^5.6.0",
 		"react": "19.1.0",
 		"react-dom": "19.1.0",
 		"react-hook-form": "^7.65.0",
