--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"react-hook-form": "^7.65.0",
 		"recharts": "^3.2.1",
 		"styled-components": "^6.1.19",
-		"swiper": "^12.0.2"
+		"swiper": "^12.0.2",
+		"web-push": "^3.6.7"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
